# kiro-rtos

./: .gitignore  LICENSE  README.md  devpost-submission.md
.kiro/specs/pcb-board-design/: design.md  requirements.md  tasks.md
docs/: README.md
firmware/: README.md
firmware/src/drivers/: display.h  input.h
firmware/src/kernel/: scheduler.h
games/: README.md
games/sdk/: minuxstation.h  spirit_kiro.h
games/snake/: main.cpp
hardware/: README.md
web-platform/: README.md  package.json
windows-client/: CMakeLists.txt  README.md
